--- a/templates/response.page.tmpl
+++ b/templates/response.page.tmpl
@@ -29,7 +29,10 @@
                 <div class="column">
                     <div class="box">
                         <div class="content">
-                            <p>Temperature: <strong>{{ .data }}</strong></p>
+                            <p>Temperature: <strong>{{ .temp }}</strong></p>
+                            <p>Pressure: <strong>{{ .pressure }}</strong></p>
+                            <p>Humidity: <strong>{{ .humidity }}</strong></p>
+                            <p>Wind-Speed: <strong>{{ .wind }}</strong></p>
                             <p>Area: <strong>{{ .area }}</strong></p>
                         </div>
                         <div class="field is-grouped is-grouped-centered">
